--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Just the Docs
 description: A Jekyll theme for documentation
 baseurl: "/just-the-docs" # the subpath of your site, e.g. /blog
-url: "http://127.0.0.1:4000"
+url: "https://noenif.github.io"
   # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
