--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "Just the Docs on GitHub":
-    - "github.com/noenif/just-the-docs"
+    - "//github.com/noenif/just-the-docs"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
